--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "",
+  "name": "functions-acc",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/functions/*.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
@@ -12,12 +11,15 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/cosmos": "^4.0.0",
+    "@azure/functions": "^4.0.0",
+    "axios": "^1.7.3",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "azure-functions-core-tools": "^4.x",
-    "@types/node": "18.x",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
-  }
+    "@types/node": "^20.x",
+    "rimraf": "^5.0.0",
+    "typescript": "^4.0.0"
+  },
+  "main": "dist/src/{index.js,functions/*.js}"
 }
